[metadata]
name = pyminion
version = 0.1.1
author = Evan Slack
author_email = evan.slack@outlook.com
description = Dominion but make it python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/evanofslack/pyminion
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pyminion
packages = find:
python_requires = >=3.8

[options.packages.find]
where = pyminion